<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <!--<item-->
            <!--android:id="@+id/nav_leaderboard"-->
            <!--android:icon="@drawable/ic_leaderboard"-->
            <!--android:title="@string/leaderboard" />-->
        <!--<item-->
            <!--android:id="@+id/nav_contact_us"-->
            <!--android:icon="@drawable/ic_contact"-->
            <!--android:title="@string/contact_us" />-->
        <item
            android:id="@+id/nav_bookmark"
            android:icon="@drawable/ic_bookmark"
            android:title="@string/bookmark" />
        <!--<item-->
            <!--android:id="@+id/nav_setting"-->
            <!--android:icon="@drawable/ic_setting"-->
            <!--android:title="@string/action_settings" />-->
        <item
            android:id="@+id/nav_more_app"
            android:icon="@drawable/ic_more"
            android:title="@string/more_app" />
        <item
            android:id="@+id/nav_like_us"
            android:icon="@drawable/ic_like"
            android:title="@string/like_us" />

        <item
            android:id="@+id/nav_privacy_policy"
            android:icon="@drawable/ic_privacy"
            android:title="@string/privacy_policy" />
        <item
            android:id="@+id/nav_about_us"
            android:icon="@drawable/ic_about"
            android:title="@string/about" />
    </group>

</menu>
