<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_below="@+id/logo"
        android:id="@+id/linearFirst"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_marginTop="@dimen/margin_sixteen"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:layout_marginRight="@dimen/margin_sixteen"
            android:layout_height="wrap_content">

            <ImageButton
                android:layout_width="@dimen/smile_button_size_multi_player"
                android:layout_height="@dimen/smile_button_size_multi_player"
                android:id="@+id/imgGk"
                android:layout_centerHorizontal="true"
                android:background="@drawable/ic_gk"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:id="@+id/txtGkNews"
                android:textColor="@color/textSecondary"
                android:textSize="@dimen/dimen_12sp"
                android:text="@string/gk_news"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <ImageButton
                android:layout_width="@dimen/smile_button_size_multi_player"
                android:layout_height="@dimen/smile_button_size_multi_player"
                android:layout_below="@+id/logo"
                android:id="@+id/imgCategory"
                android:layout_centerHorizontal="true"
                android:background="@drawable/ic_category"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:id="@+id/txtCategory"
                android:textColor="@color/textSecondary"
                android:textSize="@dimen/dimen_12sp"
                android:text="@string/category_quiz"/>


        </LinearLayout>
    </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_below="@+id/linearSecond"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_centerHorizontal="true"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="wrap_content"
                android:orientation="vertical"
                android:layout_marginRight="@dimen/margin_sixteen"
                android:layout_height="wrap_content">
                <ImageButton
                    android:layout_width="@dimen/smile_button_size_multi_player"
                    android:layout_height="@dimen/smile_button_size_multi_player"
                    android:layout_below="@+id/logo"
                    android:id="@+id/imgLetsLearn"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/ic_learn"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:id="@+id/txtLetsLearn"
                    android:textColor="@color/textSecondary"
                    android:textSize="@dimen/dimen_12sp"
                    android:text="@string/lets_learn"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:orientation="vertical"
                android:layout_height="wrap_content">

                <ImageButton
                    android:layout_width="@dimen/smile_button_size_multi_player"
                    android:layout_height="@dimen/smile_button_size_multi_player"
                    android:layout_below="@+id/logo"
                    android:id="@+id/imgFamousPlace"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/ic_famous_place"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:id="@+id/txtFamousPlace"
                    android:textColor="@color/textSecondary"
                    android:textSize="@dimen/dimen_12sp"
                    android:text="@string/famous_place"/>
            </LinearLayout>
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/linearSecond"
        android:gravity="center"
        android:weightSum="3"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearFirst"
        android:layout_centerHorizontal="true">
        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <ImageButton
                android:layout_width="@dimen/smile_button_size_multi_player"
                android:layout_height="@dimen/smile_button_size_multi_player"
                android:layout_below="@+id/logo"
                android:id="@+id/imgCurrent"
                android:layout_centerHorizontal="true"
                android:background="@drawable/ic_cf"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:id="@+id/txtCurrentAffair"
                android:textColor="@color/textSecondary"
                android:textSize="@dimen/dimen_12sp"
                android:text="@string/current_affair"/>

        </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/margin_sixteen"
        android:layout_marginRight="@dimen/margin_sixteen"
        android:layout_height="wrap_content">

        <ImageButton
            android:layout_width="@dimen/news_img_size"
            android:layout_height="@dimen/news_img_size"
            android:layout_below="@+id/logo"
            android:id="@+id/imgPlayQuiz"
            android:layout_centerHorizontal="true"
            android:background="@drawable/ic_quiz"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/txtPlayQuiz"
            android:textColor="@color/textSecondary"
            android:textSize="@dimen/dimen_12sp"
            android:text="@string/play_quiz"/>
        </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <ImageButton
            android:layout_width="@dimen/smile_button_size_multi_player"
            android:layout_height="@dimen/smile_button_size_multi_player"
            android:id="@+id/imgFamousPerson"
            android:layout_centerHorizontal="true"
            android:background="@drawable/ic_famous_prson"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/txtFamousPerson"
            android:textColor="@color/textSecondary"
            android:textSize="@dimen/dimen_12sp"
            android:text="@string/famous_person"/>

    </LinearLayout>
    </LinearLayout>

    <ImageView
        android:layout_width="@dimen/margin_100dp"
        android:layout_height="@dimen/margin_100dp"
        android:id="@+id/logo"
        android:src="@drawable/logo"
        android:layout_marginTop="@dimen/game_over_top_msg_margin"
        android:layout_centerHorizontal="true" />
    </RelativeLayout>
    </ScrollView>

    <ImageButton
        android:layout_width="@dimen/realtime_timer_progress_size"
        android:layout_height="@dimen/realtime_timer_progress_size"
        android:layout_marginTop="@dimen/margin_sixteen"
        android:layout_marginLeft="@dimen/margin_sixteen"
        android:layout_marginStart="@dimen/margin_sixteen"
        android:id="@+id/imgDrawer"
        android:background="@drawable/ic_menu"/>
</RelativeLayout>