<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="2"
        android:id="@+id/line"
        android:layout_alignParentBottom="true"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="0dp"
            android:textColor="@color/white"
            android:text="@string/home"
            android:id="@+id/btnHome"
            android:background="@color/colorAccent"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <Button
            android:layout_width="0dp"
            android:id="@+id/btnPlayAgain"
            android:textColor="@color/white"
            android:text="@string/play_again"
            android:background="@color/colorPrimary"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <RelativeLayout
        android:layout_width="match_parent"
        android:id="@+id/rel"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_180dp"
            android:background="@drawable/top"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text=""
            android:textSize="@dimen/timer_text_size"
            android:layout_alignParentTop="true"
            android:layout_marginTop="@dimen/margin_sixteen"
            android:layout_centerHorizontal="true"
            android:id="@+id/great" />
        <TextView
            android:layout_width="wrap_content"
            android:text=""
            android:textColor="@color/white"
            android:id="@+id/Level"
            android:layout_marginTop="@dimen/top_button_left_right_plus"
            android:layout_below="@+id/great"
            android:layout_centerHorizontal="true"
            android:textSize="@dimen/about_text_size"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_below="@+id/Level"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/about_text_size"
                android:text=""
                android:id="@+id/txtLevel"
                android:textColor="@color/white"/>
        </LinearLayout>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_below="@+id/rel"
        android:id="@+id/linear"
        android:layout_marginTop="@dimen/margin_sixteen"
        android:orientation="horizontal">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
    <ImageView
        android:layout_width="@dimen/margin_150dp"
        android:layout_height="@dimen/margin_150dp"
        android:background="@drawable/score_polygon"
        />
            <LinearLayout
                android:layout_width="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_centerInParent="true"
                android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_score"
                android:id="@+id/total_score"
                android:textSize="@dimen/about_text_size"
                android:textColor="@color/textSecondary"
                />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                        android:id="@+id/txtTotalScore"
                    android:textSize="@dimen/story_text_header_text_size"
                    android:textColor="@color/textPrimary"
                    />
            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_marginLeft="@dimen/game_over_button_margin"
            android:layout_height="wrap_content">
    <ImageView
        android:layout_width="@dimen/margin_150dp"
        android:layout_height="@dimen/margin_150dp"
        android:background="@drawable/score_polygon"
        />

        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_centerInParent="true"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/level_score"
                android:id="@+id/levelScore"
                android:textSize="@dimen/about_text_size"
                android:textColor="@color/textSecondary"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:id="@+id/txtLevelScore"
                android:textSize="@dimen/story_text_header_text_size"
                android:textColor="@color/textPrimary"
                />

        </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share_score"
        android:layout_gravity="center"
        android:id="@+id/share_score"
        android:layout_marginTop="@dimen/margin_sixteen"
        android:layout_below="@+id/linear"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/top_sub_heading"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="@dimen/margin_sixteen"
        android:layout_below="@+id/share_score"
        android:layout_height="wrap_content">
        <ImageButton
            android:layout_width="wrap_content"
            android:id="@+id/btnFb"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/top_toolbal_left_margin"
            android:background="@drawable/ic_fb"/>
        <ImageButton
            android:layout_width="wrap_content"
            android:id="@+id/btnGp"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/top_toolbal_left_margin"
            android:background="@drawable/ic_gplus"/>
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/btnShare"
            android:layout_margin="@dimen/top_toolbal_left_margin"
            android:background="@drawable/ic_share_fill"/>
    </LinearLayout>

    </RelativeLayout>
    </ScrollView>
</RelativeLayout>